--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,16 @@
 
 /* Your CSS Code here. */
+
+#btn {
+		background: black;
+		color: white;
+		border: none;
+		border-radius: 5px;
+	}
+
+	#btn:hover {
+		background: yellow;
+		color:black;
+		border: none;
+		border-radius: 30px;
+	}
